--- a/src/pages/Landmarkr.css
+++ b/src/pages/Landmarkr.css
@@ -743,7 +743,7 @@
 @media (max-width: 768px) {
   .landmarkr-page {
     width: 90%;
-    padding: 40px 0 100px;
+    padding: 120px 0 100px;
   }
 
   .section-heading-fancy {
