--- a/src/pages/PhonePe.css
+++ b/src/pages/PhonePe.css
@@ -1201,7 +1201,7 @@
 @media (max-width: 768px) {
   .phonepe-page {
     width: 90%;
-    padding: 40px 0 100px;
+    padding: 120px 0 100px;
   }
 
   .project-overview-infographic {
