--- a/src/pages/XAI.css
+++ b/src/pages/XAI.css
@@ -423,7 +423,7 @@
 @media (max-width: 768px) {
   .xai-page {
     width: 90%;
-    padding: 40px 0 100px;
+    padding: 120px 0 100px;
   }
 
   .xai-section-heading {
